--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "short-lnk",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test": "meteor test --driver-package=practicalmeteor:mocha"
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
@@ -17,5 +18,20 @@
   },
   "engines": {
     "node": "8.8.1"
+  },
+  "standard": {
+    "globals": [
+      "it",
+      "describe",
+      "beforeEach"
+    ]
+  },
+  "devDependencies": {
+    "chai": "^4.1.2",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "react-addons-test-utils": "^15.6.2",
+    "sinon": "^4.1.3",
+    "sinon-chai": "^2.14.0"
   }
 }
